# betavita

./: README.md
betavita/: CMakeLists.txt  run.sh
betavita/include/arm/: cortex_a9.h  cortexa9.h
betavita/include/hle/: display.h  hle.h  kernel.h  memory_manager.h  vitatypes.h  wrapper.h
betavita/include/hle/modules/: SceDisplayUser.h  SceLibKernel.h  SceSysmem.h
betavita/include/loader/: ELF.h  elf-defs.h  sce-elf-defs.h  sce-elf.h  sce-type.h  self_loader.h
betavita/include/logger/: logger.h
betavita/include/memory/: memory.h
betavita/src/: main.cpp  test.cpp
betavita/src/hle/: display.cpp  hle.cpp  kernel.cpp  memory_manager.cpp
betavita/src/hle/modules/: SceDisplayUser.cpp  SceLibKernel.cpp  SceSysmem.cpp
betavita/src/loader/: self_loader.cpp
betavita/src/logger/: logger.cpp
betavita/src/memory/: memory.cpp
betavita/vfs/: vfs.cpp
docs/: notes.txt
